fix: Removed build folder and added redis cache
